@@ -1,54 +1,54 @@
 <?xml version="1.0"?>
 <bookmarks>
   <folder _name="Software">
-        <bookmark _name="Allaire" icon_name="i-web" uri="http://services.eazel.com/redirect?http://ad.doubleclick.net/clk%3b2508286%3b5488574%3bx?http://allaire11.allaire.com/download/ordercd.cfm"/>		
-        <bookmark _name="Borland" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.borland.com/kylix/"/>
-        <bookmark _name="Eazel" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.eazel.com"/>
-        <bookmark _name="MandrakeSoft" icon_name="i-web" uri="http://services.eazel.com/redirect?http://mandrakesoft.com/"/>
-        <bookmark _name="Netraverse" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.netraverse.com"/>
-        <bookmark _name="Red Hat" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.redhat.com"/>
-        <bookmark _name="Sun StarOffice" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.sun.com/products/staroffice/"/>
-        <bookmark _name="Zero-Knowledge" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.zeroknowledge.com"/>
+        <bookmark _name="Allaire" icon_name="i-web" uri="http://ad.doubleclick.net/clk%3b2508286%3b5488574%3bx?http://allaire11.allaire.com/download/ordercd.cfm"/>		
+        <bookmark _name="Borland" icon_name="i-web" uri="http://www.borland.com/kylix/"/>
+        <bookmark _name="Eazel" icon_name="i-web" uri="http://www.eazel.com"/>
+        <bookmark _name="MandrakeSoft" icon_name="i-web" uri="http://mandrakesoft.com/"/>
+        <bookmark _name="Netraverse" icon_name="i-web" uri="http://www.netraverse.com"/>
+        <bookmark _name="Red Hat" icon_name="i-web" uri="http://www.redhat.com"/>
+        <bookmark _name="Sun StarOffice" icon_name="i-web" uri="http://www.sun.com/products/staroffice/"/>
+        <bookmark _name="Zero-Knowledge" icon_name="i-web" uri="http://www.zeroknowledge.com"/>
   </folder>
   <folder _name="Hardware">
-        <bookmark _name="Compaq" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.compaq.com/products/software/linux/"/>
-        <bookmark _name="CNET Computers.com" icon_name="i-web" uri="http://services.eazel.com/redirect?http://chkpt.zdnet.com/chkpt/hudc02290/computers.cnet.com/hardware/0-1016.html"/>
-        <bookmark _name="Dell" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.dell.com/linux/"/>
-        <bookmark _name="Penguin Computing" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.penguincomputing.com/?vid=eazel"/>
-        <bookmark _name="ZDNet Linux Hardware Database" icon_name="i-web" uri="http://services.eazel.com/redirect?http://chkpt.zdnet.com/chkpt/hud002290/lhd.zdnet.com"/>
+        <bookmark _name="Compaq" icon_name="i-web" uri="http://www.compaq.com/products/software/linux/"/>
+        <bookmark _name="CNET Computers.com" icon_name="i-web" uri="http://chkpt.zdnet.com/chkpt/hudc02290/computers.cnet.com/hardware/0-1016.html"/>
+        <bookmark _name="Dell" icon_name="i-web" uri="http://www.dell.com/linux/"/>
+        <bookmark _name="Penguin Computing" icon_name="i-web" uri="http://www.penguincomputing.com/?vid=eazel"/>
+        <bookmark _name="ZDNet Linux Hardware Database" icon_name="i-web" uri="http://chkpt.zdnet.com/chkpt/hud002290/lhd.zdnet.com"/>
   </folder>
   <folder _name="News and Media">
-         <bookmark _name="Binary Freedom" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.binaryfreedom.com/"/>
-         <bookmark _name="CNET Linux Center" icon_name="i-web" uri="http://services.eazel.com/redirect?http://chkpt.zdnet.com/chkpt/hudc02290/linux.cnet.com/linux/0-1518529-7-3378110.html"/>
-         <bookmark _name="LinuxOrbit.com" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.linuxorbit.com"/>
-         <bookmark _name="Linux Weekly News" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.lwn.net"/>
-         <bookmark _name="O'Reilly" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.eazel.oreillynet.com"/>
-         <bookmark _name="OSDN" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.osdn.com"/>
-         <bookmark _name="ZDNet Linux Resource Center" icon_name="i-web" uri="http://services.eazel.com/redirect?http://chkpt.zdnet.com/chkpt/hud0022900/linux.zdnet.com"/>
+         <bookmark _name="Binary Freedom" icon_name="i-web" uri="http://www.binaryfreedom.com/"/>
+         <bookmark _name="CNET Linux Center" icon_name="i-web" uri="http://chkpt.zdnet.com/chkpt/hudc02290/linux.cnet.com/linux/0-1518529-7-3378110.html"/>
+         <bookmark _name="LinuxOrbit.com" icon_name="i-web" uri="http://www.linuxorbit.com"/>
+         <bookmark _name="Linux Weekly News" icon_name="i-web" uri="http://www.lwn.net"/>
+         <bookmark _name="O'Reilly" icon_name="i-web" uri="http://www.eazel.oreillynet.com"/>
+         <bookmark _name="OSDN" icon_name="i-web" uri="http://www.osdn.com"/>
+         <bookmark _name="ZDNet Linux Resource Center" icon_name="i-web" uri="http://chkpt.zdnet.com/chkpt/hud0022900/linux.zdnet.com"/>
   </folder>
   <folder _name="Web Services">
-         <bookmark _name="CollabNet" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.collab.net/community/"/>
-         <bookmark _name="Covalent" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.covalent.com"/>
-         <bookmark _name="Rackspace" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.rackspace.com"/>
-         <bookmark _name="Red Hat Network" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.redhat.com/network/"/>
-         <bookmark _name="SourceForge" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.sourceforge.net"/>
+         <bookmark _name="CollabNet" icon_name="i-web" uri="http://www.collab.net/community/"/>
+         <bookmark _name="Covalent" icon_name="i-web" uri="http://www.covalent.com"/>
+         <bookmark _name="Rackspace" icon_name="i-web" uri="http://www.rackspace.com"/>
+         <bookmark _name="Red Hat Network" icon_name="i-web" uri="http://www.redhat.com/network/"/>
+         <bookmark _name="SourceForge" icon_name="i-web" uri="http://www.sourceforge.net"/>
   </folder>
   <folder _name="International">
-         <bookmark _name="Conectiva" icon_name="i-web" uri="http://services.eazel.com/redirect?http://en.conectiva.com/"/>
-         <bookmark _name="Linux One" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.linuxone.co.kr/english2/eng/main.htm"/>
-         <bookmark _name="Open Source Asia" icon_name="i-web" uri="http://www.opensourceasia.com/English/what_e.html"/>
-         <bookmark _name="RedFlag Linux" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.redflag-linux.com/english/index.html"/>
-         <bookmark _name="Sun Wah Linux" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.sw-linux.com/nonflash_front.htm"/>
+         <bookmark _name="Conectiva" icon_name="i-web" uri="http://en.conectiva.com/"/>
+         <bookmark _name="Linux One" icon_name="i-web" uri="http://www.linuxone.co.kr/english2/eng/main.htm"/>
+         <bookmark _name="Open Source Asia" icon_name="i-web" uri="http://www.opensourceasia.com"/>
+         <bookmark _name="RedFlag Linux" icon_name="i-web" uri="http://www.redflag-linux.com/english/index.html"/>
+         <bookmark _name="Sun Wah Linux" icon_name="i-web" uri="http://www.sw-linux.com/nonflash_front.htm"/>
   </folder>
   <folder _name="Linux Resources">
-         <bookmark _name="Debian.org" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.debian.org"/>
-         <bookmark _name="Freshmeat.net" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.freshmeat.net"/>
-         <bookmark _name="GNOME.org" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.gnome.org"/>
-         <bookmark _name="GNU.org" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.gnu.org"/>
-         <bookmark _name="Linux Online" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.linux.org"/>
-         <bookmark _name="Linux Documentation Project" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.linuxdoc.org"/>
-         <bookmark _name="LinuxNewbie.org" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.linuxnewbie.org"/>
-         <bookmark _name="OpenOffice" icon_name="i-web" uri="http://services.eazel.com/redirect?http://www.openoffice.org"/>
+         <bookmark _name="Debian.org" icon_name="i-web" uri="http://www.debian.org"/>
+         <bookmark _name="Freshmeat.net" icon_name="i-web" uri="http://www.freshmeat.net"/>
+         <bookmark _name="GNOME.org" icon_name="i-web" uri="http://www.gnome.org"/>
+         <bookmark _name="GNU.org" icon_name="i-web" uri="http://www.gnu.org"/>
+         <bookmark _name="Linux Online" icon_name="i-web" uri="http://www.linux.org"/>
+         <bookmark _name="Linux Documentation Project" icon_name="i-web" uri="http://www.linuxdoc.org"/>
+         <bookmark _name="LinuxNewbie.org" icon_name="i-web" uri="http://www.linuxnewbie.org"/>
+         <bookmark _name="OpenOffice" icon_name="i-web" uri="http://www.openoffice.org"/>
   </folder>
 </bookmarks>
 
