@@ -1,3 +1,8 @@
+2001-07-08  John Gotts  <jgotts@linuxsavvy.com>
+
+	* data/static_bookmarks.xml:
+	Made the bookmarks work again.
+
 2001-07-07  Seth Nickell  <snickell@stanford.edu>
 
 	* libnautilus-private/nautilus-directory-private.h:
